12-kubernetes/code/lab-03/external.yml
apiVersion: v1
kind: Service
metadata: {name: external-db}
spec:
  type: ExternalName
  externalName: db.production.example.com   # a CNAME, nothing more
